# SOLID

./: CMakeLists.txt
DIP/: CMakeLists.txt  main.cpp  servicebad.cpp  servicebad.h  servicegood.cpp  servicegood.h  teststringreader.cpp
ISP/: CMakeLists.txt  ISP.pro  settingsbad.cpp  settingsbad.h  settingsgood.cpp  settingsgood.h  testsettings.cpp
LSP/: CMakeLists.txt  LSP.pro  messagebad.cpp  messagebad.h  messagegood.cpp  messagegood.h  testmessage.cpp
OCP/: CMakeLists.txt  OCP.pro  cmdprocessorbad.cpp  cmdprocessorbad.h  cmdprocessorgood.cpp  cmdprocessorgood.h  cmdprocessortemplate.cpp  cmdprocessortemplate.h  icmdprocessor.h  testcmdprocessor.cpp
SRP/: CMakeLists.txt  SRP.pro  testtextcorrector.cpp  textcorrectorbad.cpp  textcorrectorbad.h  textcorrectorgood.cpp  textcorrectorgood.h
